<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InstructionsFragment">

    <!-- using LinearLayout because the layout is simple and I want
    to align child views in vertical direction  -->
    <LinearLayout
        android:id="@+id/instructions_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:background="@drawable/instructions_screen"
        android:orientation="vertical">
        <!-- instruction 1  -->
        <TextView
            android:id="@+id/Discover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:fontFamily="@font/roboto"
            android:text="@string/Instruction_text"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
        <!-- instruction 2  -->
        <TextView
            android:id="@+id/instruction_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_horizontal"
            android:text="@string/keepChic"
            android:textSize="18sp" />
        <!-- next button  -->
        <Button
            android:id="@+id/start"
            android:layout_width="196dp"
            android:layout_height="43dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonshape"
            android:text="@string/getStarted"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordfeild" />
    </LinearLayout>
</layout>